--- a/estilos.css
+++ b/estilos.css
@@ -2,15 +2,19 @@ body {
   font-family: 'Poppins';
   margin: 0;
   padding: 0;
+background-color: black;
 }
 
+
 p {
-  font-size: 20px;
+font-size: 29px;
+
 }
 
 li {
   list-style: none;
   margin-right: 25px;
+  color:#fff
 }
 
 #primero {
@@ -33,24 +37,31 @@ li {
 }
 
 h1 {
+  font-style: oblique;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: 60px;
   margin: 0;
+  color:#fff
+  
 }
 
 h2 {
   font-size: 25px;
   margin-bottom: 40px;
+  color:#fff
+
 }
 
 a {
   font-size: 14px;
-  background: #5cb8ff;
+  background: #ff83f5;
   padding: 20px 30px 20px 30px;
   color: white;
+ 
 }
 
 header {
-  background: url();
+  background: url(img/fondo.jfif);
   height: 100vh;
   background-size: cover;
 }
@@ -67,16 +78,20 @@ h3 {
   text-align: center;
   font-size: 55px;
   font-weight: normal;
+  background-color: black;
+  color: #fff;
 }
 
 .contenedor-sobremi {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  background-color: black;
 }
 
 .contenedor-parrafo-y-boton {
-  width: 42%;
+  width: 29%;
+  color: #fff;
 }
 
 .contenedor-parrafo-y-boton p {
