--- a/estilos.css
+++ b/estilos.css
@@ -127,6 +127,24 @@ h3 {
 background-image: url(img/imagen11.jpg);
 }
 
+.celeste2{
+  background-image: url(img/imagen10.jpg);
+}
+
+.celeste3{
+  background-image: url(img/imagen9.jpg);
+}
+
+.violeta2 {
+background-image: url(img/imagen8.png);
+}
+
+.violeta3 {
+background-image: url(img/imagen7.jfif);
+}
+
+
+
 .servicio h4 {
   font-size: 30px;
   margin: 0;
